lume/LumeEngine/test/unittest/assets/test_data/image/ktx-test/ktx/invalid/pixeldata/cubemap_face_underflow.ktx
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:d9e5d7bb17050cd9a1f0511c03b2d793998e91a35b32b45b9a12e45080b3b1a5
size 836
